gccida/g2/swap_rtx_condition_1
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/swap_rtx_condition_1/src/reg-stack.c:1683:36: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
*( _WORD *)pat = swap_condition( ( rtx_code)*( _WORD *)pat); 
                                   ^~~~~~~~
                                   rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/swap_rtx_condition_1/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/swap_rtx_condition_1/src/reg-stack.c:1683:45: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
*( _WORD *)pat = swap_condition( ( rtx_code)*( _WORD *)pat); 
                                 ~~~~~~~~~~~^~~~~~~~~~~~~~
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/swap_rtx_condition_1/src/obj/reg-stack.o] Error 1
